--- a/MavenHibernateProject/pom.xml
+++ b/MavenHibernateProject/pom.xml
@@ -38,6 +38,22 @@
 	    <artifactId>mysql-connector-j</artifactId>
 	    <version>9.3.0</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/jakarta.platform/jakarta.jakartaee-web-api -->
+	<dependency>
+	    <groupId>jakarta.platform</groupId>
+	    <artifactId>jakarta.jakartaee-web-api</artifactId>
+	    <version>11.0.0</version>
+	    <scope>provided</scope>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
+	<dependency>
+	    <groupId>jakarta.servlet</groupId>
+	    <artifactId>jakarta.servlet-api</artifactId>
+	    <version>6.1.0</version>
+	    <scope>provided</scope>
+	</dependency>
 
   </dependencies>
 </project>
