--- a/Day7_Hibernate/pom.xml
+++ b/Day7_Hibernate/pom.xml
@@ -58,4 +58,14 @@
 	</dependency>
 
   </dependencies>
+  
+  
+  <build>
+    <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+        </resource>
+    </resources>
+</build>
+
 </project>
